<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".new_Contact2"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolcustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppThemeActionBarStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:title="@string/new_page"
        app:titleMarginStart="20dp"
        app:titleTextColor="?attr/colorOnPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolcustom"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/TeFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/first"
            android:inputType="textPersonName"
            android:textColor="@color/dark"
            android:textColorHint="#696969"
            android:textColorHighlight="@color/dark"
            android:textColorLink="@color/dark"
            android:textCursorDrawable="@color/dark"
            android:backgroundTint="#696969" />

        <EditText
            android:id="@+id/TeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="@color/dark"
            android:textColorHint="#696969"
            android:backgroundTint="#696969"/>

        <EditText
            android:id="@+id/TePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColor="@color/dark"
            android:textColorHint="#696969"
            android:backgroundTint="#696969"/>

        <EditText
            android:id="@+id/TeEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:textColor="@color/dark"
            android:textColorHint="#696969"
            android:backgroundTint="#696969"/>

        <EditText
            android:id="@+id/TePostal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/postal"
            android:inputType="textPostalAddress"
            android:textColor="@color/dark"
            android:textColorHint="#696969"
            android:backgroundTint="#696969"/>
    </LinearLayout>

</RelativeLayout>